--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode=development --devtool eval-source-maps --open",
+    "start": "webpack-dev-server --mode=development --devtool eval-source-map --open",
     "build": "webpack --mode=production"
   },
   "keywords": [],
